--- a/style.css
+++ b/style.css
@@ -11,6 +11,11 @@
 
  @import url('https://fonts.googleapis.com/css2?family=Cinzel&display=swap');
 
+ a{
+   text-decoration: none;
+   color: #fafafa;
+ }
+
   /* home */
 
     /* nav */
