--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
   box-sizing: border-box;
 }
 
+
  body{
    background-color: #d1cc9b
  }
@@ -22,7 +23,7 @@
 
  .font_title_navbar{
     font-family: 'Cinzel', serif;
-    font-size: 2.95rem;
+    font-size:  100%;
     align-self: center;
  }
 
@@ -31,7 +32,7 @@
     width: 90%;
     margin: 0 auto;
     display: flex;
-    font-size: 2rem;
+    font-size: 200%;
  }
 
  .margin_item{
@@ -63,7 +64,7 @@
  /* content */
 
  .main_content{
-    height: 90vh;
+    height: 100vh;
  }
 
  .row{
@@ -84,11 +85,11 @@
  }
 
  .text_content h1{
-    font-size: 6rem;
+    font-size: 500%;
  }
 
  .text_content h2{
-    font-size: 4rem;
+    font-size: 300%;
  }
 
  .buton1{
@@ -103,21 +104,21 @@
 
  .cards_products{
    display: flex;
-   justify-content: space-evenly;
-   align-items: center;
-   width: 98vw;
-   height: 90vh;
+   justify-content: center;
+   margin-top: 7.5%;
+   flex-wrap: wrap;
+   gap: 8rem;
+   padding-bottom: 3rem;
  }
 
  .card{
    background-color: #2b7d6c;
-   width: 20%;
-   aspect-ratio: 2/2;
+   width: 25rem;
    object-fit: contain;
-   border-radius: 10%;
+   border-radius: 3rem;
  }
 
- .card_body{
+ .card-body{
    display: flex;
    flex-direction: column;
    color: #fafafa;
@@ -126,15 +127,18 @@
    margin-top: 5%;
    margin-bottom: 5%;
    font-family:  'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-   font-size: 2rem;
+   font-size: 200%;
  }
 
  .botao2{
    margin-top: 2.5%;
-   padding: 2% 15%;
+   margin-bottom: 10%;
+   padding: 2% 2%;
    border-radius: 2rem;
    font-size: 1.5rem;
    font-weight: bolder;
+   width: fit-content;
+   max-width: 90%;
  }
 
   /* contact1*/
@@ -144,9 +148,15 @@
    flex-direction: column;
    justify-content: center;
    align-items: center;
-   width: 99.4vw;
-   height: 90vh;
+   margin-top: 6%;
   }
+
+  .form_content{
+   display: flex;
+   align-items: center;
+   justify-content: center;
+  }
+
 
   .content_form1{
    display: flex;
@@ -167,7 +177,7 @@
   }
 
   .botao3{
-   display: flex;
+   align-self: flex-end;
    padding: 2% 2%;
    border-radius: 2rem;
    font-size: 1.5rem;
@@ -175,7 +185,7 @@
    justify-content: center;
    align-items: center;
    text-align: center;
-   width: 15%;
+   width: 10rem;
    background-color: #2b7d6c;
    color: #fafafa;
   }
