--- a/style.css
+++ b/style.css
@@ -5,12 +5,23 @@
   box-sizing: border-box;
 }
 
-
  body{
    background-color: #d1cc9b
  }
 
  @import url('https://fonts.googleapis.com/css2?family=Cinzel&display=swap');
+
+ @media(max-width: 90rem){
+
+      .navbar-collapse{
+      display: flex;
+      flex-direction: column;
+     }
+     .font_title_navbar{
+      font-size:  65% !important;
+   }
+     
+  }
 
  a{
    text-decoration: none;
@@ -25,6 +36,14 @@
     font-family: 'Cinzel', serif;
     font-size:  100%;
     align-self: center;
+    justify-self: center;
+ }
+
+ .navbar-collapse{
+   display: flex;
+   justify-content: space-between;
+   flex-direction: row;
+   margin-left: 2.5%;
  }
 
  .nav_content{
@@ -116,6 +135,7 @@
    width: 25rem;
    object-fit: contain;
    border-radius: 3rem;
+   max-width: 95%;
  }
 
  .card-body{
@@ -149,6 +169,7 @@
    justify-content: center;
    align-items: center;
    margin-top: 6%;
+   padding-bottom: 3rem;
   }
 
   .form_content{
