--- a/style.css
+++ b/style.css
@@ -20,6 +20,20 @@
      .font_title_navbar{
       font-size:  65% !important;
    }
+    .img_content{
+      visibility: hidden;
+      margin: -3.1%;
+    }
+    .text_content{
+      margin-bottom: -1rem;
+      padding-bottom: 0;
+      font-size: 1rem;
+    }
+    .content_form1{
+      width: 80% !important;
+      aspect-ratio: 1/2 !important;
+      justify-content: space-between !important;
+    }
      
   }
 
@@ -153,7 +167,7 @@
  .botao2{
    margin-top: 2.5%;
    margin-bottom: 10%;
-   padding: 2% 2%;
+   padding: 4% 10%;
    border-radius: 2rem;
    font-size: 1.5rem;
    font-weight: bolder;
@@ -170,7 +184,7 @@
    align-items: center;
    margin-top: 6%;
    padding-bottom: 3rem;
-  }
+  } 
 
   .form_content{
    display: flex;
@@ -199,7 +213,7 @@
 
   .botao3{
    align-self: flex-end;
-   padding: 2% 2%;
+   padding: 10% 2%;
    border-radius: 2rem;
    font-size: 1.5rem;
    font-weight: bolder;
@@ -217,6 +231,27 @@
      display: flex;
      align-items: center;
      justify-content: space-between;
+     align-self: flex-end;
+  }
+
+  .botao_duplo2{
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+}
+
+.botao4{
+   align-self: flex-end;
+   padding: 2% 2%;
+   border-radius: 2rem;
+   font-size: 1.5rem;
+   font-weight: bolder;
+   justify-content: center;
+   align-items: center;
+   text-align: center;
+   width: 10rem;
+   background-color: #2b7d6c;
+   color: #fafafa;
   }
 
       /* Home 2*/
